# fsds25-analogy

./: .gitignore  README.md  analogy.py  load_script.py  main.py  pyproject.toml  requirements.txt  setup.sh  show_structure.py
data/: analogies.csv  migration_sample_analogies (1).csv  migration_sample_analogies.csv
src/: __init__.py  analogy_tests.py  models.py  utils.py
src/analogy/: embeddings.py  llm_analogies.py
